# gettextify

./: .gitignore  AUTHORS  CONTRIBUTING.md  README.md  ROADMAP.md  meson.build
src/: Program.cs  Translate.cs
src/cli/: main.cpp
src/core/: catalog.cpp  catalog.h  metadata.h  translation_entry.h
src/engine/: mo_compiler.cpp  mo_compiler.h
src/format/csv/: csv_parser.cpp  csv_parser.h
src/tests/: test_catalog.cpp  test_csv_parser.cpp  test_mo_compiler.cpp
src/tests/data/: basic.csv  quoted.csv  semicolon.csv
